<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helpFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpFragment"
    android:background="@drawable/bg_gradiant">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CREATE"
            android:textSize="30sp"
            android:textColor="#DDD7D7"
            android:fontFamily="sans-serif-condensed"
            android:padding="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_bg"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="7sp"
            android:text="@string/create"
            android:textColor="#454545"
            android:textSize="30sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="READ"
            android:textSize="30sp"
            android:textColor="#DDD7D7"
            android:fontFamily="sans-serif-condensed"
            android:padding="12sp"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/linear_bg"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="7sp"
        android:text="@string/read"
        android:textColor="#454545"
        android:textSize="30sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DELETE"
            android:textSize="30sp"
            android:textColor="#DDD7D7"
            android:fontFamily="sans-serif-condensed"
            android:padding="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_bg"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="7sp"
            android:text="@string/Delete"
            android:textColor="#454545"
            android:textSize="30sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
           />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="UPDATE"
            android:textSize="30sp"
            android:textColor="#DDD7D7"
            android:fontFamily="sans-serif-condensed"
            android:padding="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_bg"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="7sp"
            android:text="@string/update"
            android:textColor="#454545"
            android:textSize="30sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DELETE ALL NOTES"
            android:textSize="30sp"
            android:textColor="#DDD7D7"
            android:fontFamily="sans-serif-condensed"
            android:padding="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_bg"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="7sp"
            android:text="@string/deleteAll"
            android:textColor="#454545"
            android:textSize="30sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SHARE"
            android:textSize="30sp"
            android:textColor="#DDD7D7"
            android:fontFamily="sans-serif-condensed"
            android:padding="12sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_bg"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="7sp"
            android:text="@string/share"
            android:textColor="#454545"
            android:textSize="30sp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>